* Mon Dec 23 2013 Ding-Yi Chen <dchen at redhat.com> - 1.2.0
- Enhancement:
  + ManageFile:
    - Add absolute file support
    - MANAGE_FILE_INSTALL: Add TARGETS support.
    - MANAGE_FILE_INSTALL: Add RENAME support.
    - GIT_GLOB_TO_CMAKE_REGEX: Convert git glob to cmake regex
  + ManageArchive:
    - PACK_SOURCE_CPACK: Pack with CPack
    - PACK_SOURCE_ARCHIVE: Now can specify OUTPUT_FILE.
    - Fixed Bug 1040333 - RFE: Support .gitignore file as 
      source of CPACK_SOURCE_IGNORE_FILES
  + ManageDependency: Manage dependencies.
  + ManageString:
    - STRING_APPEND: Append a string to a variable.
  + ManageTranslation:
    - MANAGE_GETTEXT: 
      + Can specify MSGFMT_OPTIONS and MSGMERGE_OPTIONS
      + Add gettext-devel to BUILD_REQUIRES.
  + ManageVariable:
    - VARIABLE_TO_ARGN: Merge the variable and options to 
      the form of ARGN.
  + Cached variables:
    - RPM_SPEC_CMAKE_FLAG: cmake flags in rpm build.
    - RPM_SPEC_MAKE_FLAG: make flags in rpm build.
    - Changed Modules:
  + ManageArchive:
    - PACK_SOURCE_ARCHIVE: Can now pass either 
      empty, outputDir, or source File. 
  + ManageGConf2: Fixed.
  + ManageRPM
    - Add support of pre, post, and preun
  + ManageVariable:
    - VARIABLE_PARSE_ARGN can now handle multiple-appeared options.
- Changed:
  + CMake policy no longer enforced by default.

* Mon Dec 23 2013 Ding-Yi Chen <dchen at redhat.com> - 1.1.6
- Enhancement:
  + Fedora version will now automatically updated.
  + New macros:
    - VARIABLE_PARSE_ARGN: Parse the arguments.
  + New scripts: 
    cmake-fedora-koji: Koji utilities.
    cmake-fedora-fedpkg: Fedpkg utilities.
  + Changed scripts:
    koji-build-scratch: fedora_1, fedora_2, 
    epel_1, epel_2 can now be used as build scopes.
  + BODHI_UPDATE_TYPE is no longer required.
  + No need to manual edit project.spec.in
  + ADD_CUSTOM_TARGET_COMMAND now allow "ALL"
- Bug Fixes:
  Resolves: Bug 879141 - Excessive quotation mark for target tag_pre